# Void_analyze

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
examples/core fiber/: README.md  voids_analysis_info.txt  voids_position.xyz  voids_surface_position.xyz
examples/thin fiber/: README.md  voids_analysis_info.txt  voids_position.xyz  voids_surface_position.xyz
include/: color.h  cxxopts.hpp  timer.h
src/: CMakeLists.txt  atom.cpp  atom.h  bin.cpp  bin.h  check_empty_bin.cpp  color_codes.h  filter_small_bins.cpp  find_voids.cpp  find_voids_surface.cpp  functions.h  grid_info.cpp  grid_info.h  is_in_circle.cpp  main.cpp  output.cpp  output.h  output_analysis_info.cpp  output_analysis_info.h  output_surface_atoms.cpp  output_surface_atoms.h  output_voids.h  parse_options.cpp  read_xyz_file.cpp  set_parameter.cpp  settings.cpp  settings.h  simulation_cell.cpp  simulation_cell.h  write_xyz_voids.cpp  write_xyz_voids_surface_atom.cpp
test/: core.xyz  first.xyz  thin.xyz  voids_analysis_info.txt
unit_test/: Argv.h  CMakeLists.txt  utest.cpp
